crates/reinhardt-forms/crates/macros/tests/ui/fail/missing_fields_section.stderr
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `reinhardt_forms`
  --> tests/ui/fail/missing_fields_section.rs:8:14
   |
 8 |       let _form = form! {
   |  _________________^
 9 | |         name: "test_form",
10 | |     };
   | |_____^ use of unresolved module or unlinked crate `reinhardt_forms`
   |
   = help: if you wanted to use a crate named `reinhardt_forms`, use `cargo add reinhardt_forms` to add it to your `Cargo.toml`
   = note: this error originates in the macro `form` (in Nightly builds, run with -Z macro-backtrace for more info)
help: there is an enum variant `reinhardt_forms_macros_ast::FormValidator::Form` and 1 other; try using the variant's enum
   |
 8 -     let _form = form! {
 9 -         name: "test_form",
10 -     };
 8 +     let _form = reinhardt_forms_macros_ast::FormValidator;
   |
 8 -     let _form = form! {
 9 -         name: "test_form",
10 -     };
 8 +     let _form = reinhardt_forms_macros_ast::TypedFormValidator;
   |
